# apps.core.preloaded.menu-screen

./: .gitattributes  AUTHORS  CMakeLists.txt  LICENSE.Flora  NOTICE  org.tizen.menu-screen.efl  org.tizen.menu-screen.manifest  org.tizen.menu-screen.rule  project.config  tags
data/: CMakeLists.txt  main_operation.launch  org.tizen.menu-screen.xml.in
data/edje/: CMakeLists.txt  all_apps_portrait.edc  button_edit.edc  group_4x4_portrait.edc  index.edc  item_4x4.edc  layout_portrait.edc  pagecontrol.edc
data/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  nl_NL.po  pl.po  (+16 more)
debian/: changelog  control  copyright  org.tizen.menu-screen.install.in  org.tizen.menu-screen.install.in.in  org.tizen.menu-screen.postinst  rules
include/: conf.h  db.h  index.h  item.h  item_badge.h  item_event.h  key.h  layout.h  list.h  mapbuf.h  menu_screen.h  mouse.h  page.h  page_scroller.h  pkgmgr.h  popup.h  util.h
include/all_apps/: db.h  layout.h  list.h  shortcut.h
packaging/: init_menu-screen_DB.sh  org.tizen.menu-screen.changes  org.tizen.menu-screen.manifest  org.tizen.menu-screen.spec
src/: db.c  index.c  item.c  item_badge.c  item_event.c  key.c  layout.c  list.c  mapbuf.c  menu_screen.c  mouse.c  page.c  page_scroller.c  pkgmgr.c  popup.c  smart_menu.c  util.c
src/all_apps/: db.c  layout.c  list.c  shortcut.c
